# netease-note-backup

./: .gitignore  README.md  netease-note-backup.user.js  pyproject.toml
.github/workflows/: build-and-release.yml
netease/: __init__.py  browser_manager.py  crawler.py  data_processor.py  exporter.py  run.py  ui.py
scripts/: build_exe_poetry.bat
